<resources>
    <string name="app_name">Raccoon Job</string>
    <string name="sign_in">Sign In</string>
    <string name="offline_mode">Offline mode</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="add">Add</string>
    <string name="hours">Hours</string>
    <string name="hoursTxt">Hours:</string>
    <string name="money">Money:</string>
    <string name="_0">0</string>
    <string name="rate">Rate:</string>
</resources>
