<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".DetailsActivity">

    <TextView
            android:layout_width="150dp"
            android:layout_height="34dp"
            android:id="@+id/textViewHours"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtHours"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:hint="@string/_0"/>
    <TextView
            android:text="@string/money"
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:id="@+id/txtViewMoney"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/txtHours"
            android:textAlignment="center"
            android:textSize="18sp" android:layout_marginStart="75dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="34dp"
            android:id="@+id/textViewMoney" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/txtHours" android:textSize="18sp" android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:hint="@string/_0"/>
    <TextView
            android:text="@string/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVHours"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:layout_width="374dp"
            android:layout_height="335dp"
            android:id="@+id/txtHours"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="horizontal|vertical"
            android:enabled="true"
            android:isScrollContainer="true"
            android:focusable="true" app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintTop_toBottomOf="@+id/tVHours" android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.058"/>
    <TextView
            android:text="@string/hoursTxt"
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:id="@+id/textView10"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtHours"
            android:textAlignment="center"
            android:textSize="18sp" android:layout_marginStart="75dp" app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>