<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_header_selector"
        tools:context=".OfflineModeActivity">

    <EditText
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:ems="10"
            android:id="@+id/strRate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/strTime"
            android:background="@drawable/both_corners"
            app:layout_constraintHorizontal_bias="0.016"
            android:text="@string/rate"
            android:clickable="false"
            android:editable="false" app:layout_constraintEnd_toStartOf="@+id/txtRate"/>
    <EditText
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:ems="10"
            android:id="@+id/txtRate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.097"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/endTime"
            android:background="@drawable/both_corners"
            android:hint="@string/_0" android:inputType=""/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/addBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:background="@drawable/both_corners"
            app:layout_constraintHorizontal_bias="0.497" android:onClick="addHours" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/start_time"
            android:layout_width="130dp"
            android:layout_height="44dp"
            android:ems="10"
            android:id="@+id/strTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.028"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calendarDate"
            android:onClick="startTimePicker"
            android:background="@drawable/both_corners"
            app:layout_constraintHorizontal_bias="0.005"
            android:maxWidth="75dp" app:layout_constraintEnd_toStartOf="@+id/endTime"/>
    <TextView
            android:layout_width="240dp"
            android:layout_height="36dp"
            android:inputType="date"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dateEditText"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:hint="Date"
            android:background="@drawable/both_corners"
            android:clickable="false"
            android:editable="false"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="20sp"/>
    <Button
            android:text="@string/end_time"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:ems="10"
            android:id="@+id/endTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.028"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calendarDate"
            android:onClick="endTimePicker"
            android:background="@drawable/both_corners"
            android:maxWidth="75dp"/>
    <CalendarView
            android:layout_width="355dp"
            android:layout_height="301dp"
            android:id="@+id/calendarDate" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.575"/>

</android.support.constraint.ConstraintLayout>