<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_header_selector"
        tools:context=".MainActivity">


    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true"
            android:addStatesFromChildren="false"
            android:animateLayoutChanges="false"
            android:id="@+id/radio_group"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
        <RadioButton
                android:text="@string/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton4"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:background="@drawable/left_corner"
                android:textAlignment="center"
                android:minHeight="50dp"
                android:checked="true"/>
        <RadioButton
                android:text="@string/offline_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/offlineModeRadio"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:background="@drawable/right_corner"
                android:textAlignment="center"
                android:minHeight="50dp"/>
    </RadioGroup>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="75dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="75dp"
            android:hint="@string/email_address"
            android:textAlignment="center" app:layout_constrainedHeight="true" app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="parent" android:layout_marginBottom="76dp"
            android:background="@drawable/both_corners"
            app:layout_constraintBottom_toTopOf="@+id/updateText"
            android:minHeight="45dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/updateText"
            android:hint="@string/password"
            android:textAlignment="center"
            android:layout_marginBottom="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/both_corners"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:minHeight="45dp"/>

    <Button
            android:id="@+id/updateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:background="@drawable/both_corners"
            android:minWidth="200dp"
            android:layout_marginBottom="216dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier" app:barrierDirection="top"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier2" app:barrierDirection="left"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier3" app:barrierDirection="left"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier4" app:barrierDirection="top"/>

</android.support.constraint.ConstraintLayout>